--- a/FirebaseMVC/Views/Comment/Edit.cshtml
+++ b/FirebaseMVC/Views/Comment/Edit.cshtml
@@ -1,16 +1,14 @@
 ﻿@model NoBull.Models.Comment
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
 
-<h4>Comment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
@@ -18,17 +16,14 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="BlogId" type="hidden" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Blog" asp-action="Details">Back to List</a>
+    <a asp-controller="Blog" asp-action="Details">Back to Blog</a>
 </div>
 
 @section Scripts {
