--- a/FirebaseMVC/Views/Comment/Delete.cshtml
+++ b/FirebaseMVC/Views/Comment/Delete.cshtml
@@ -4,19 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h4>Are you sure you want to delete your comment?</h4>
 <div>
-    <h4>Comment</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
@@ -29,22 +20,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CreateDateTime)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BlogId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BlogId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserProfileId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserProfileId)
-        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="Blog" asp-action="Details">Back to List</a>
+        <a asp-controller="Blog" asp-action="Details" asp-route-id="@Model.BlogId">Back to List</a>
     </form>
 </div>
