--- a/FirebaseMVC/Views/Blog/MyBlog.cshtml
+++ b/FirebaseMVC/Views/Blog/MyBlog.cshtml
@@ -24,8 +24,10 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
+
+  <tbody>
+    @foreach (var item in Model) 
+     {
         <tr>
             
             <td>
@@ -43,6 +45,6 @@
                 @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
             </td>
         </tr>
-}
-    </tbody>
+     }
+  </tbody>
 </table>
