--- a/FirebaseMVC/Views/Blog/Create.cshtml
+++ b/FirebaseMVC/Views/Blog/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h3>Create</h3>
 
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -15,21 +14,24 @@
                 <input asp-for="Id" type="hidden" />
             </div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label asp-for="Title" class="control-label">What is it called?</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="control-label" />
+                <label asp-for="Content" class="control-label">What do you want to write about?</label>
+                <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
+                <br />
             </div>
             <div class="form-group">
                 <input asp-for="CreateDateTime" type="hidden" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-outline-primary" />
             </div>
+            <br />
         </form>
     </div>
 </div>
