--- a/FirebaseMVC/Views/Blog/MyBlog.cshtml
+++ b/FirebaseMVC/Views/Blog/MyBlog.cshtml
@@ -9,7 +9,30 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+
+@foreach (var item in Model)
+ {
+    <div class="card mb-3">
+        <h2 class="card-header text-white bg-primary">@Html.DisplayFor(modelItem => item.Title)</h2>
+        <div class="card-body">
+            <p class="card-text">@Html.DisplayFor(modelItem => item.Content)</p>
+        </div>
+
+        <div class="card-body">
+            <p class="card-text">@Html.DisplayFor(modelItem => item.CreateDateTime)</p>
+        </div>
+
+        <div class="card-footer text-muted">
+            <p class="card-text">
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </p>
+        </div>
+    </div>
+ }
+
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -25,26 +48,26 @@
         </tr>
     </thead>
 
-  <tbody>
-    @foreach (var item in Model) 
-     {
-        <tr>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateDateTime)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.Id  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
-            </td>
-        </tr>
-     }
-  </tbody>
-</table>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Content)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreateDateTime)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>*@
