--- a/FirebaseMVC/Views/Comment/Create.cshtml
+++ b/FirebaseMVC/Views/Comment/Create.cshtml
@@ -4,31 +4,30 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Comment</h4>
-<hr />
+<h4>What are your thoughts?</h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input asp-for="BlogId" type="hidden" />
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Blog" asp-action="Details">Back to List</a>
+    <br />
+    <a asp-controller="Blog" asp-action="Details" asp-route-id="@Model.BlogId">Back to Blog</a>
 </div>
 
 @section Scripts {
