--- a/FirebaseMVC/Views/Comment/Edit.cshtml
+++ b/FirebaseMVC/Views/Comment/Edit.cshtml
@@ -5,13 +5,11 @@
 }
 
 
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
@@ -19,13 +17,15 @@
                 <input asp-for="BlogId" type="hidden" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <br />
+                <input type="submit" value="Save" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <br />
     <a asp-controller="Blog" asp-action="Details" asp-route-id="@Model.BlogId">Back to Blog</a>
 </div>
 
